--- a/login and register/index.html
+++ b/login and register/index.html
@@ -5,56 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GOD AND HIS STORIES - Login</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/supabase-js/2.0.4/supabase-js.umd.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <!-- Background Particles -->
         <div class="background">
             <div class="particles">
-                <!-- Add multiple particle divs for more particles -->
-                <div class="particle"></div>
-                <div class="particle"></div>
-                <div class="particle"></div>
-                <div class="particle"></div>
-                <div class="particle"></div>
-                <div class="particle"></div>
-                <div class="particle"></div>
-                <div class="particle"></div>
-                <div class="particle"></div>
-                <div class="particle"></div>
-                <div class="particle"></div>
+                <!-- Particles effect dynamically added here via JS -->
             </div>
         </div>
-
-        <!-- Title and Description -->
         <div class="title-container">
             <h1 class="title">GOD AND HIS STORIES</h1>
-            <p class="description">Sign in to explore divine stories and knowledge.</p>
+            <p class="description">Let’s see and visit God's destiny and His stories of how God defeated Evil.</p>
         </div>
 
-        <!-- Authentication Form -->
-        <div id="auth-container">
+        <div id="auth-container" class="auth-container">
             <h2 id="auth-title">Login</h2>
-            <!-- Email input -->
             <input type="email" id="email" placeholder="Email" required>
-            <!-- Password input -->
             <input type="password" id="password" placeholder="Password" required>
-            <!-- Submit Button -->
-            <button id="submitBtn">Login</button>
-
-            <!-- Google Sign-In -->
-            <button id="googleSignInBtn">Sign in with Google</button>
-
-            <!-- Toggle between Login and Register -->
+            <button id="submitBtn" class="submit-button">Login</button>
+            <button id="googleSignInBtn" class="google-button">Login with Google</button>
             <p id="toggleAuth">Don't have an account? Register here</p>
         </div>
     </div>
 
+    <!-- JavaScript starts here -->
     <script>
         // Initialize Supabase
-        const supabaseUrl = 'https://irjihbqqdzmzqkkewbbu.supabase.co'; // Replace with your Supabase URL
-        const supabaseAnonKey = 'process.env.SUPABASE_KEY'; // Replace with your Supabase anon key
+        const supabaseUrl = 'https://your-supabase-url.supabase.co'; // Replace with your Supabase URL
+        const supabaseAnonKey = 'your-anon-key'; // Replace with your Supabase anon key
         const supabase = supabase.createClient(supabaseUrl, supabaseAnonKey);
 
         const authContainer = document.getElementById('auth-container');
@@ -91,14 +70,14 @@
                     if (error) throw error;
                     alert('Login successful!');
                     // Redirect after login success
-                    window.location.href = 'your-success-url'; // Add your redirection URL here
+                    window.location.href = 'login-success-url.html'; // Replace with your actual URL
                 } else {
                     // Register with email
                     const { data, error } = await supabase.auth.signUp({ email, password });
                     if (error) throw error;
                     alert('Registration successful!');
                     // Redirect after registration success
-                    window.location.href = 'your-success-url'; // Add your redirection URL here
+                    window.location.href = 'register-success-url.html'; // Replace with your actual URL
                 }
             } catch (error) {
                 alert(error.message);
@@ -112,7 +91,7 @@
                 if (error) throw error;
                 alert('Google Sign-In successful!');
                 // Redirect after Google Sign-In success
-                window.location.href = 'your-success-url'; // Add your redirection URL here
+                window.location.href = 'google-signin-success-url.html'; // Replace with your actual URL
             } catch (error) {
                 alert(error.message);
             }
