--- a/login and register/index.html
+++ b/login and register/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GOD AND HIS STORIES - Login/Register</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <meta name="google-signin-client_id" content="YOUR_GOOGLE_CLIENT_ID.apps.googleusercontent.com"> <!-- Replace with your Google client ID -->
+    <link rel="stylesheet" href="styles.css"> <!-- Link to CSS file -->
 </head>
 <body>
     <header>
@@ -35,8 +33,6 @@
                 <p>Already have an account? <span class="toggle-link" id="show-login">Login here</span></p>
                 <p id="register-message" class="message"></p>
             </form>
-
-            <div class="g-signin2" data-onsuccess="onSignIn"></div> <!-- Google Sign-In button -->
         </section>
     </main>
 
