--- a/login and register/index.html
+++ b/login and register/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GOD AND HIS STORIES - Login/Register</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to CSS file -->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body>
     <header>
@@ -21,6 +22,7 @@
                 <button class="button" id="login-btn" type="button">Login</button>
                 <p>Don't have an account? <span class="toggle-link" id="show-register">Register here</span></p>
                 <p id="login-message" class="message"></p>
+                <div class="g-signin2" data-onsuccess="onSignIn"></div> <!-- Google Sign-In Button -->
             </form>
 
             <!-- Register Form -->
