--- a/BhagawatGita/gita.html
+++ b/BhagawatGita/gita.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GOD AND HIS STORIES</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="gita.css">
 </head>
 <body>
     <div class="logo">
@@ -26,6 +26,6 @@
         </div> <!-- Add closing div tag -->
     </div>
 
-    <script src="script.js"></script>
+    <script src="gita.js"></script>
 </body>
 </html>
