--- a/BhagawatGita/gita.html
+++ b/BhagawatGita/gita.html
@@ -17,13 +17,13 @@
         <h2>Hello! Let your goodness and purity arise</h2>
         <p>Please click on the button below</p>
         <div class="buttons">
-            <a href="bhagavad-gita.pdf" download>
+            <a href="https://www.mediafire.com/file/ul55se2v7e36iv6/Bhagavad-gita-Swami-BG-Narasingha.pdf/file" download>
                 <button class="btn">🧾 Download Bhagavad Gita PDF</button>
             </a>
-            <a href="bhagavad-gita.mp3" download>
+            <a href="https://www.mediafire.com/folder/k1b9q5rbaew7e/GITA.p3s" download>
                 <button class="btn">🧾 Download Bhagavad Gita MP3</button>
             </a>
-        </div> <!-- Add closing div tag -->
+        </div> 
     </div>
 
     <script src="gita.js"></script>
