--- a/choose/index.html
+++ b/choose/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>GOD AND HIS STORIES</title>
-	<link rel="stylesheet" href="styles.css">
+  <title>GOD AND HIS STORIES</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<div class="header">
-		<h1 class="title">GOD AND HIS STORIES</h1>
-		<div class="https://storage.googleapis.com/a1aa/image/fv1xgE0AFI3jDq8Fdfe31TntMngf67JOIcegdQagksYTnUGcC.jpg"></div>
-	</div>
-	<h2 class="middle-heading">Hey! Select your book 📕</h2>
-	<div class="book-options">
-		<button class="book-button" id="bible-button">
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkGPo2wqH4EfI-nRCYSAYhBsm6PgUNzmQv0Q&s" alt="Bible">
-			<p>Bible</p>
-		</button>
-		<button class="book-button" id="gita-button">
-			<img src="https://blog.cdn.level.game/2024/08/bhagavad-gita-quotes-on-life-1.webp" alt="Gita">
-			<p>Gita</p>
-		</button>
-		<button class="book-button" id="quran-button">
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAe4fv6c1TRNt0129e2jzkAkLdKkOp52SI2w&s" alt="Quran">
-			<p>Quran</p>
-		</button>
-	</div>
-	<div id="read-button-container"></div>
+  <div class="header">
+    <h1 class="title">GOD AND HIS STORIES</h1>
+    <div class="https://storage.googleapis.com/a1aa/image/fv1xgE0AFI3jDq8Fdfe31TntMngf67JOIcegdQagksYTnUGcC.jpg"></div>
+  </div>
+  <h2 class="middle-heading">Hey! Select your book 📕</h2>
+  <div class="book-options">
+    <button class="book-button" id="bible-button" data-url="https://example.com/bible">
+      <img src="https://encrypted-tbn0.gstatic.com /images?q=tbn:ANd9GcSkGPo2wqH4EfI-nRCYSAYhBsm6PgUNzmQv0Q&s" alt="Bible">
+      <p>Bible</p>
+    </button>
+    <button class="book-button" id="gita-button" data-url="https://bhagawatgita-oub11gml7-prakit1234s-projects.vercel.app/">
+      <img src="https://blog.cdn.level.game/2024/08/bhagavad-gita-quotes-on-life-1.webp" alt="Gita">
+      <p>Gita</p>
+    </button>
+    <button class="book-button" id="quran-button" data-url="https://example.com/quran">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAe4fv6c1TRNt0129e2jzkAkLdKkOp52SI2w&s" alt="Quran">
+      <p>Quran</p>
+    </button>
+  </div>
+  <div id="read-button-container"></div>
 
-	<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
