--- a/QURAN/index.html
+++ b/QURAN/index.html
@@ -10,7 +10,9 @@
     <div class="particles"></div>
     <header>
         <h1>GOD AND HIS STORIES</h1>
-        <div class="logo">🕌</div>
+        <div class="logo">
+            <img src="your-image-url-here" alt="Team Logo">
+        </div>
     </header>
     <main>
         <h2>Hello! Let your faith and knowledge guide you, please click on the button below</h2>
@@ -19,8 +21,12 @@
             <button id="download-mp3-btn" onclick="downloadMP3()">🎧 Download Quran (MP3)</button>
         </div>
     </main>
-    <footer>Made with love and devotion by Team Rebellion (We Love God)</footer>
+    <footer>
+        <p>Made with love and devotion by Team Rebellion (We Love God)</p>
+        <p>&copy; 2024 GOD AND HIS STORIES. All rights reserved.</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
+
