--- a/QURAN/index.html
+++ b/QURAN/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>GOD AND HIS STORIES</h1>
         <div class="logo">
-            <img src="your-image-url-here" alt="Team Logo">
+            <img src="https://storage.googleapis.com/a1aa/image/uailsySMyCrcEtBno1eIWbIn5tlaueXeDJKf3xIn6k25YeKcC.jpg" alt="Team Logo">
         </div>
     </header>
     <main>
