--- a/choose/index.html
+++ b/choose/index.html
@@ -19,7 +19,7 @@
       <img src="https://blog.cdn.level.game/2024/08/bhagavad-gita-quotes-on-life-1.webp" alt="Gita">
       <p>Gita</p>
     </button>
-    <button class="book-button" id="quran-button" data-url="https://example.com/quran">
+    <button class="book-button" id="quran-button" data-url="https://quran-five-zeta.vercel.app/">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAe4fv6c1TRNt0129e2jzkAkLdKkOp52SI2w&s" alt="Quran">
       <p>Quran</p>
     </button>
