--- a/choose/index.html
+++ b/choose/index.html
@@ -11,7 +11,7 @@
   </div>
   <h2 class="middle-heading">Hey! Select your book 📕</h2>
   <div class="book-options">
-    <button class="book-button" id="bible-button" data-url="https://example.com/bible">
+    <button class="book-button" id="bible-button" data-url="https://bible-nine-gold.vercel.app/">
       <img src="https://encrypted-tbn0.gstatic.com /images?q=tbn:ANd9GcSkGPo2wqH4EfI-nRCYSAYhBsm6PgUNzmQv0Q&s" alt="Bible">
       <p>Bible</p>
     </button>
@@ -20,7 +20,7 @@
       <p>Gita</p>
     </button>
     <button class="book-button" id="quran-button" data-url="https://quran-five-zeta.vercel.app/">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAe4fv6c1TRNt0129e2jzkAkLdKkOp52SI2w&s" alt="Quran">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAe4fv6c1TRNt0129e2jzkAkLdKkO52SI2w&s" alt="Quran">
       <p>Quran</p>
     </button>
   </div>
